# kanop-replication

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: paper_replication_notes.md  presentation_notes.md
experiments/: __init__.py  create_american_put_presentation_summary.py  run_american_put_baselines.py  run_american_put_delta_comparison.py  run_american_put_kanop.py  run_american_put_mlp.py  run_american_put_rate_sensitivity.py  run_asian_american_baselines.py  smoke_test_kan_regressor.py  smoke_test_mlp_regressor.py
src/kanop/: __init__.py  basis.py  binomial.py  black_scholes.py  config.py  delta.py  lsmc.py  metrics.py  models.py  payoffs.py  plotting.py  regression.py  scaling.py  simulation.py
src/kanop_replication.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_american_put_kanop_experiment.py  test_american_put_mlp_experiment.py  test_basis.py  test_binomial.py  test_black_scholes.py  test_config.py  test_delta.py  test_lsmc.py  test_models.py  test_plotting.py  test_rate_sensitivity_experiment.py  test_result_tables.py  test_simulation.py
