[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanop-replication"
version = "0.1.0"
description = "Python skeleton for replicating the KANOP option pricing paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
torch = ["torch>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
